mediaqueries.css
@media screen and (max-width: 500px) {
    .about-details-container {
        /* padding: 10px 30px; */
    }
}

@media screen and (max-width: 800px) {

    .profilepic-container {
        width: 60%;
        max-width: 300px;
    }
    
    .profile-container {  
        flex-wrap: wrap;
    }

    .about-details-container {  
        flex-wrap: wrap;
    }

    .about-pic-container {
        width: 0px;
        height: 0px;
    }
}

